--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,11 @@
   "rewrites": [
     {
       "source": "/stats/:match*",
-      "destination": "https://analytics.leohuynh.dev/:match*"
+      "destination": "https://cloud.umami.is/:match*"
+    },
+    {
+      "source": "/stats/api/send",
+      "destination": "https://cloud.umami.is/api/send"
     }
   ]
 }
