--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/better-sqlite3": "^7.6.13",
     "@upstash/redis": "^1.36.1",
     "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "autoprefixer": "^10.4.13",
     "better-sqlite3": "^12.2.0",
     "body-scroll-lock": "^4.0.0-beta.0",
